--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
     "cors": "^2.8.5",
+    "jwt-decode": "^3.1.2",
     "material-table": "^1.69.2",
     "mdi-material-ui": "^6.22.0",
     "moment": "^2.29.0",
