--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^14.14.25",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
+    "axios": "^0.21.1",
     "cors": "^2.8.5",
     "jwt-decode": "^3.1.2",
     "material-table": "^1.69.2",
