--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "material-table": "^1.69.2",
     "mdi-material-ui": "^6.22.0",
     "moment": "^2.29.0",
+    "mui-datatables": "^3.7.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
@@ -52,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/mui-datatables": "^3.7.4",
     "@types/react-router-dom": "^5.1.7"
   }
 }
