--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "moment": "^2.29.0",
     "mui-datatables": "^3.7.7",
     "react": "^17.0.1",
+    "react-csv-downloader": "^2.7.0",
     "react-dom": "^17.0.1",
     "react-images-uploading": "^3.1.3",
     "react-router-dom": "^5.2.0",
